--- a/ceshi.ipynb
+++ b/ceshi.ipynb
@@ -2,6 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#这个代码绘制的是神经网络的混沌热图，对应第二个Phase_diagram文件夹中的文件，做了一些修改"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
    "outputs": [],
