--- a/3.Model_evolution/ceshi.ipynb
+++ b/3.Model_evolution/ceshi.ipynb
@@ -81,11 +81,13 @@
     "\n",
     "    # (x_train, y_train), (x_test, y_test) = utils.load_qmnist_data()\n",
     "    (x_train, y_train), (x_test, y_test) = utils.load_data(args.dataset)\n",
+    "    #创建一个新的属性，input_shape，是一个整数，大小为x_train的第二个维度，用于记录输入数据的形状\n",
     "    args.input_shape = x_train.shape[1]\n",
     "\n",
-    "    for num_repeat in range(args.num_repeats):\n",
+    "    for num_repeat in range(args.num_repeats): #循环args.num_repeats次\n",
     "        # break\n",
-    "        print('num_repeat={}'.format(num_repeat))\n",
+    "        print('num_repeat={}'.format(num_repeat)) #打印是第几次循环\n",
+    "        #创建三个新的属性，均为字符串，用于保存权重、损失和accuracy的文件路径\n",
     "        args.save_weights_dir = 'rawdata/weights/{}/{}'.format(\n",
     "            args.arguments, num_repeat)\n",
     "        args.save_losses_dir = 'rawdata/losses/{}/{}'.format(\n",
@@ -93,17 +95,24 @@
     "        args.save_scores_dir = 'rawdata/scores/{}/{}'.format(\n",
     "            args.arguments, num_repeat)\n",
     "\n",
+    "        #若激活函数为relu\n",
     "        if args.activation_func == 'relu':\n",
-    "            activation_func = tf.nn.relu\n",
+    "            activation_func = tf.nn.relu #激活函数为relu\n",
+    "            #利用keras API创建一个顺序模型（sequential，多个网络层的线性堆叠），设置两个全连接层（dense layer）\n",
     "            model = tf.keras.Sequential([\n",
     "                tf.keras.layers.Dense(args.input_shape, activation=activation_func, name='layer_1',\n",
     "                                      use_bias=False, input_shape=(args.input_shape,),\n",
     "                                      kernel_regularizer=keras.regularizers.l2(args.weight_decay),),\n",
     "                tf.keras.layers.Dense(10, activation=tf.nn.softmax,\n",
     "                                      kernel_regularizer=keras.regularizers.l2(args.weight_decay))\n",
-    "            ])\n",
+    "            ]) \n",
+    "            #第一个全连接层，有args.input_shape个神经元，激活函数为relu，没有偏置项，输入形状为(args.input_shape,)，这意味着模型期望的输入是一个长度为args.input_shape的一维向量，还使用了L2正则化，正则化项的权重为args.weight_decay\n",
+    "            #第二个全连接层，有10个神经元，激活函数为softmax，使用了L2正则化，正则化项的权重为args.weight_decay\n",
+    "        \n",
+    "        #若激活函数为tanh\n",
     "        elif args.activation_func == 'tanh':\n",
-    "            activation_func = tf.nn.tanh\n",
+    "            activation_func = tf.nn.tanh #激活函数为tanh\n",
+    "            #利用keras API创建一个顺序模型（sequential，多个网络层的线性堆叠），设置两个全连接层（dense layer）\n",
     "            model = tf.keras.Sequential([\n",
     "                tf.keras.layers.Dense(args.input_shape, activation=activation_func, name='layer_1',\n",
     "                                      kernel_initializer=tf.keras.initializers.RandomNormal(\n",
@@ -115,25 +124,30 @@
     "                                      #     mean=(0)/(args.input_shape), stddev=1/(2*np.sqrt(args.input_shape))),\n",
     "                                      kernel_regularizer=keras.regularizers.l2(args.weight_decay))\n",
     "            ])\n",
-    "\n",
+    "            #第一个全连接层，有args.input_shape个神经元，激活函数为tanh，权重初始化方法为tf.keras.initializers.RandomNormal，即权重初始值将从均值为(0)/(args.input_shape)，标准差为1/(2*np.sqrt(args.input_shape))的正态分布中随机抽取；没有偏置项，输入形状为(args.input_shape,)，这意味着模型期望的输入是一个长度为args.input_shape的一维向量，还使用了L2正则化，正则化项的权重为args.weight_decay\n",
+    "            #第二个全连接层，有10个神经元，激活函数为softmax，使用了L2正则化，正则化项的权重为args.weight_decay（这一层的权重初始化器被注释掉了，故它将使用Keras的默认权重初始化器）\n",
+    "        \n",
+    "        #若优化算法为SGD\n",
     "        if args.optimizer == 'SGD':\n",
-    "            optimizer = tf.keras.optimizers.SGD(\n",
-    "                learning_rate=args.lr, momentum=args.momentum, nesterov=False, name='SGD')\n",
+    "            optimizer = tf.keras.optimizers.SGD(learning_rate=args.lr, momentum=args.momentum, nesterov=False, name='SGD')\n",
+    "            #创建SGD随机梯度下降优化器，设置学习率，动量，以及优化器名称为SGD，不适用Nesterov动量\n",
     "        elif args.optimizer == 'Adam':\n",
-    "            optimizer = tf.keras.optimizers.Adam(\n",
-    "                learning_rate=args.lr, beta_1=args.beta_1, beta_2=args.beta_2, epsilon=1e-07,\n",
-    "                amsgrad=False, name='Adam')\n",
-    "        metric_loss = SparseCategoricalCrossentropy(from_logits=False,\n",
-    "                                                    name='sparse_categorical_crossentropy')\n",
-    "        model.compile(optimizer=optimizer,\n",
-    "                      loss='sparse_categorical_crossentropy',\n",
-    "                      metrics=[metric_loss, 'accuracy'])\n",
-    "        reporter = loggingreporter.LoggingReporter(\n",
-    "            args, x_train, y_train, x_test, y_test)\n",
+    "            optimizer = tf.keras.optimizers.Adam(learning_rate=args.lr, beta_1=args.beta_1, beta_2=args.beta_2, epsilon=1e-07, amsgrad=False, name='Adam')\n",
+    "            #创建Adam优化器，设置学习率，beta_1（一阶矩估计的指数衰减率），beta_2（二阶矩估计的指数衰减率），epsilon（数值稳定性参数），以及优化器名称为Adam，不适用AMSGrad版本的Adam\n",
+    "\n",
+    "        metric_loss = SparseCategoricalCrossentropy(from_logits=False, name='sparse_categorical_crossentropy')\n",
+    "        #创建一个SparseCategoricalCrossentropy损失函数，这是一种常用于多酚类问题的损失函数，它期望的目标（即标签）是证书，而模型的输出是概率分布。from_logits=False表示输出的是概率分布，而不是原始的logits（若为true，则tf会在计算损失之前自动对模型的输出应用softmax函数，将logits转换为概率分布）；损失函数的名称为sparse_categorical_crossentropy\n",
+    "        \n",
+    "        model.compile(optimizer=optimizer, loss='sparse_categorical_crossentropy', metrics=[metric_loss, 'accuracy'])\n",
+    "        #配置模型的学习过程，第一个参数是优化器（之前设置的optimizer对象）；第二个参数是损失函数（之前设置的SparseCategoricalCrossentropy损失函数，metric_loss那里）；第三个参数是评估指标，这里设置了两个评估指标，一个是之前设置的损失函数，另一个是accuracy（准确率）\n",
+    "        reporter = loggingreporter.LoggingReporter(args, x_train, y_train, x_test, y_test)\n",
+    "        #\n",
+    "\n",
+    "\n",
     "        # model.fit(x_train, y_train, epochs=args.epochs,\n",
     "        #           verbose=0, callbacks=[reporter, ], validation_split=0.2)\n",
-    "        model.fit(x_train, y_train, epochs=args.epochs, batch_size=args.batch_size,\n",
-    "                  verbose=0, callbacks=[reporter, ], validation_data=(x_test, y_test))\n",
+    "        model.fit(x_train, y_train, epochs=args.epochs, batch_size=args.batch_size, verbose=0, callbacks=[reporter, ], validation_data=(x_test, y_test))\n",
+    "\n",
     "        tf.keras.backend.clear_session()\n",
     "\n",
     "\n",
